Use polling in embedded controller while booting. Might fix #5861. Is this usage of the flag ok?

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36565 a95241bf-73f2-0310-859d-f6bbb57e9c96